--- a/睡眠监测界面.html
+++ b/睡眠监测界面.html
@@ -371,7 +371,7 @@
   <div class="Container1">
     <nav>
       <ul>
-        <li><a href="首页.html">首页</a></li>
+        <li><a href="index.html">首页</a></li>
         <li><a href="登录注册界面.html">登录/注册</a></li>
         <li><a href="设备链接检测界面.html">设备链接监测</a></li>
         <li><a href="睡眠监测界面.html">睡眠实时监测</a></li>
